solved conflcits between yoshoa code and my own

--- a/src/features/onbaordingWizard/configuration/style.css
+++ b/src/features/onbaordingWizard/configuration/style.css
@@ -47,5 +47,5 @@
      position:absolute;
      top:79px;
      z-index: 9999 !important;
-     background-color: whites;
+     background-color: white;
 }
