--- a/src/App.css
+++ b/src/App.css
@@ -1,3 +1,7 @@
+@import "@fontsource/poppins/300.css"; /* light */
+@import "@fontsource/poppins/400.css";/* regular */
+@import "@fontsource/poppins/600.css"; /* semi bold */
+@import "@fontsource/poppins/700.css"; /* bold */
 
 #root {
   max-width: 1280px;
