--- a/src/features/onbaordingWizard/configuration/style.css
+++ b/src/features/onbaordingWizard/configuration/style.css
@@ -1,6 +1,6 @@
 .github-place {
      top: -23px;
-     right: 137px;
+     right: 151px;
      z-index: 999 !important; 
 }
 
@@ -45,7 +45,37 @@
 
 .custom-position-add-form {
      position:absolute;
-     top:79px;
+     top:10px;
+     left:60px;
      z-index: 9999 !important;
      background-color: white;
 }
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+ 
+
+
+ 
+
