--- a/src/index.css
+++ b/src/index.css
@@ -1,12 +1,9 @@
 @import "tailwindcss";
-@import "@fontsource/poppins/300.css"; /* light */
-@import "@fontsource/poppins/400.css";/* regular */
-@import "@fontsource/poppins/600.css"; /* semi bold */
-@import "@fontsource/poppins/700.css"; /* bold */
+
 
 
 :root {
-  font-family: "Poppins",Inter, system-ui, Avenir, Helvetica, Arial, sans-serif;
+  font-family: "Poppins", system-ui, Helvetica, Arial, sans-serif;
   line-height: 1.5;
  
 
@@ -35,9 +32,29 @@
 }
 
 
+/* custom schrolls */
+
+.custom-scroll-x {
+  overflow-x: auto;
+  overflow-y: hidden;
+}
+.custom-scroll-x::-webkit-scrollbar{
+  height: 8px;
+}
+
+
+.custom-scroll-x::-webkit-scrollbar-thumb {
+  background-color:#D9D9D9;
+}
+
+.custom-scroll-x::-webkit-scrollbar-track{
+  background: white;
+}
+
+
+
+
 .custom-scrollbar{
-  width: 500px;
-  height: 200px;
   overflow-y: auto;
 }
 
@@ -49,9 +66,13 @@
   background-color:#D9D9D9;
 }
 
+
 .custom-scrollbar::-webkit-scrollbar-track{
   background: white;
+  margin: 10px;
 }
+
+
 
 .blue-bg {
   background-color: #530DF6;
@@ -61,6 +82,22 @@
   background-color:#D9D9D9;
 }
 
+.main-text{
+  font-weight: 600;
+  font-size: 20px;
+}
+
+.second-text{
+  font-weight: 400;
+  font-size: 18px;
+}
+
+body{
+  overflow: hidden;
+  user-select: none;
+}
+
+
 
 
 
@@ -68,8 +105,7 @@
   border: none;
   padding:1px;
   outline:none;
-  /* width: 500px; */
-  font-size: 25px;
+  font-size: 20px;
   font-weight:600;
   color:#757575;
 }
@@ -77,7 +113,7 @@
 .heading-config:focus {
 border: none;
 outline: none;
-font-size: 28px;
+font-size: 25px;
 }
 
 
@@ -86,7 +122,6 @@ font-size: 28px;
   border: none;
   padding:1px;
   outline:none;
-  width: 100px;
   font-size: 15px;
   font-weight:400;
   color: #757575;
@@ -98,4 +133,5 @@ font-size: 28px;
 border: none;
 outline: none;
 font-size: 20px;
+border-bottom: 2px solid #757575;
 }
