--- a/src/index.css
+++ b/src/index.css
@@ -9,10 +9,7 @@
 body {
   font-family: 'Poppins', sans-serif;
 }
-@import "@fontsource/poppins/300.css"; /* light */
-@import "@fontsource/poppins/400.css";/* regular */
-@import "@fontsource/poppins/600.css"; /* semi bold */
-@import "@fontsource/poppins/700.css"; /* bold */
+
 
 
 :root {
@@ -108,3 +105,4 @@ font-size: 28px;
 border: none;
 outline: none;
 font-size: 20px;
+}
