--- a/src/component/wizardCard/style.css
+++ b/src/component/wizardCard/style.css
@@ -1,5 +1,6 @@
 .custom-wizard-config-shadow {  
-   box-shadow: inset 0px 2px 2px 1px rgba(246, 150, 54, 1);      
+   box-shadow: inset 0px 2px 2px 1px rgba(246, 150, 54, 1);  
+   border-radius: 5px;    
 }
 
 .text-custom-gray {
