--- a/src/index.css
+++ b/src/index.css
@@ -94,6 +94,14 @@
   margin: 2px;
 }
 
+.hide-scrollbar::-webkit-scrollbar {
+  display: none; 
+}
+.hide-scrollbar {
+  -ms-overflow-style: none;  
+  scrollbar-width: none;  
+}
+
 
 
 .blue-bg {
