--- a/src/features/onbaordingWizard/style.css
+++ b/src/features/onbaordingWizard/style.css
@@ -45,7 +45,7 @@
 
 .custom-position-add-form {
      position:absolute;
-     top:10px;
+     top:10vh;
      left:60px;
      z-index: 9999 !important;
      background-color: white;
